# ContVidPred

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.wandb  README.md  Taskfile.yml  colab_requirements.txt  colab_runner.ipynb  docker-compose.yml  env.linux.lock.yml  env.yml  environment.yml  execute_job.py  model_analysis.ipynb  pyproject.toml  requirements.txt  ruff.toml  test.ipynb
.config/wandb/: launch-config.yaml
configs/: base_config.yml  config_run_1.yml  vae_config.yml  vae_tiny_config.yml
configs/DIT/: FINAL_dit_t_2_32_config.yml  dit_m_2_32_config.yml  dit_t_1_32_config.yml  dit_t_2_32_config.yml  dit_tiny_config.yml
configs/LATTE/: latte_tiny_config.yml
configs/SRNO/: FINAL_srno_edsr_config.yml
configs/UNET/: FINAL_unet_t_32_config.yml  basic_unet_m_32_config.yml  basic_unet_m_32_extras_config.yml  unet_m_32_config.yml  unet_m_32_extras_cfg_config.yml  unet_m_32_extras_config.yml  unet_m_32_extras_noise_aug_cfg_config.yml  unet_m_32_extras_noise_aug_config.yml  unet_t_32_config.yml  unet_t_32_extras_cfg_config.yml  unet_t_32_extras_config.yml  unet_t_32_extras_noise_aug_cfg_config.yml  unet_t_32_extras_noise_aug_config.yml
configs/UPT/: FINAL_upt_3d_t_1xres_config.yml  FINAL_upt_3d_t_cont_config.yml  FINAL_upt_3d_t_cont_no_ln_reg_config.yml  FINAL_upt_vae_t_1xres_config.yml  FINAL_upt_vae_t_cont_config.yml  FINAL_upt_vae_t_cont_no_ln_reg_config.yml  upt_3d_m_32_config.yml  upt_3d_t_32_config.yml  upt_ae_m_32_config.yml  upt_ae_t_32_config.yml  upt_coca_m_32_config.yml  upt_coca_t_32_config.yml  upt_m_32_config.yml  upt_s_32_config.yml  upt_t_32_config.yml  upt_vae_m_32_config.yml  upt_vae_t_32_config.yml
configs/VAE/: mdsprites_vae_small_config.yml  mdsprites_vae_tiny_config.yml  ucf101_vae_tiny_config.yml  vmdsprites_vae_tiny_config.yml
run_configs/: base_config.yml
scripts/: execute_job.py  execute_test_job.py  execute_train_job.py  generate_mdsprites.py  generate_vmdsprites.py  train_dit.py  train_srno.py  train_unet.py  train_upt.py  train_upt_ae.py  train_upt_cont.py  train_upt_vae.py  train_upt_vae_cont.py  train_vae.py
vitssm/: execute_job.py
vitssm/data/: __init__.py  constructors.py  datasets.py  read.py  samplers.py  transforms.py  utils.py  wrappers.py
vitssm/data/mdsprites/: frame.py  generators.py  shapes.py
vitssm/engine/: __init__.py  action_recognition.py  constructors.py  next_frame_prediction.py  tasks.py
vitssm/models/: __init__.py  latte.py  lnfp.py  lnfp_simple.py  modules.py  next_frame_prediction.py  vae.py  video_transformer.py
vitssm/models/diffusion/: __init__.py  diffusion_utils.py  gaussian_diffusion.py  respace.py
vitssm/models/dit/: __init__.py  _dit.py  _next_frame.py
vitssm/models/srno/: __init__.py  _edsr.py  _galerkin.py  _sronet.py  _utils.py
vitssm/models/unet/: __init__.py  _next_frame.py  _uncond.py  _unet.py
vitssm/models/upt/: __init__.py  _approximator.py  _autoencoder.py  _modules.py  _next_frame.py
vitssm/models/vae/: __init__.py
vitssm/utils/: __init__.py  metrics.py  visual.py
wandb/: latest-run
wandb/run-20240906_134042-jgep0k9r/: run-jgep0k9r.wandb
wandb/run-20240906_134042-jgep0k9r/files/: config.yaml  requirements.txt  wandb-metadata.json
